Fix: Aligned select2 include path Fix: Use default markdown code background color for highlight.js

--- a/static/less/markdown.less
+++ b/static/less/markdown.less
@@ -120,6 +120,10 @@
     p:last-child {
          margin: 0;
     }
+
+    pre code.hljs {
+        background-color: #f5f5f5;
+    }
     
     blockquote {
         border-left-width: 10px;
